--- a/example_webpage.html
+++ b/example_webpage.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Личная страница Веры Кузнецовой</title>
+		<title>Личная страница Ольги Таракановой</title>
 	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<meta name="description" content="Личная страница и контакты">
@@ -17,7 +17,7 @@
 				</div> 
 				<nav class="collapse navbar-collapse" id="bs-navbar"> 
 					<ul class="nav navbar-nav navbar-right"> 
-						<li> <a href="">Страница курса</a> </li> 
+						<li> <a href="http://vk.com/hse_fipl16">Страница курса</a> </li> 
 						<li> <a href="">Страница группы</a> </li> 
 					</ul>
 				</nav> 
@@ -28,12 +28,12 @@
 				<div class="row">
 					<div class="col-md-4">
 						<br/><br/>
-						<h1>Вера Кузнецова</h1>
+						<h1>Ольга Тараканова</h1>
 						<hr>
-						<p><i>Человек, умеющий делать HTML</i></p> 
+						<p><i>???</i></p> 
 	                </div>
 					<div class="col-md-4">
-        	            <img src="https://icdn.lenta.ru/images/2015/10/24/11/20151024110742236/pic_4f4f8067ce7874a1c8f1c901577ea93b.jpg" title="Фото ИТАР ТАСС" alt="" style="height:320px; width:480px; margin:20px 20px 40px 20px; " >
+        	            <img src="https://pp.vk.me/c636324/v636324512/2689b/5y_DioxWufA.jpg" title="Фото" alt="" style="height:320px; width:480px; margin:20px 20px 40px 20px; " >
 					</div>
 	            </div>
 			</div>
@@ -47,7 +47,7 @@
 				</article>
 				<article>
 					<h3>Школа</h2>
-					<p>СУНЦ</p>
+					<p>Гимназия №3, г. Волгоград</p>
 				</article>
 				</div>
 				<div class="col-md-6">
@@ -76,17 +76,16 @@
 			<div class="col-md-3">
 				<h3>Мои контакты в социальных сетях</h3>
 						<ul>
-							<li>VK</li>
-							<li>Facebook</li>
-							<li>Twitter</li>
-							<li>Instagram</li>
+							<li><a href="http://vk.com/just_aum">VK</a></li>
+							<li><a href="http://twitter.com/j_aum_project">Twitter</a></li>
+							<li><a href="http://instagram.com/olgatarr">Instagram</a></li>
 						</ul>
 				</div>
 			</div>
 		</section>
 		<footer class="bs-docs-footer"> 
 			<div class="container"> 
-				<p style="text-align:right; ">&copy; В. Кузнецова, 2016</p> 
+				<p style="text-align:right; ">&copy; О. Тараканова, 2016</p> 
 			</div>
 		</footer>
 	</body>
